--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <script defer src="/src/render.js"></script>
+    <script defer type="module" src="/src/render.js"></script>
   </head>
   <body>
     <div id="app"></div>
