config: vite로 번들링 도구 변경

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
-    <script defer type="module" src="/src/render.js"></script>
+    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
+    <script type="module" src="/render.js"></script>
   </body>
 </html>
